force-app/main/default/objects/Pedido__c/Pedido__c.object-meta.xml
<CustomObject>
    <label>Pedido</label>
    <nameField>
        <label>Pedido Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pedidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>