force-app/main/default/objects/Pedido__c/fields/Condi_o_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Condi_o_de_Pagamento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Condição de Pagamento</label>
    <referenceTo>Condi_o_de_Pagamento__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>