force-app/main/default/objects/Pedido__c/fields/Data_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Entrega__c</fullName>
    <label>Data de Entrega</label>
    <required>true</required>
    <type>Date</type>
</CustomField>