force-app/main/default/objects/Pedido__c/fields/Endereco_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Endereco_da_Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Endereço da Conta</label>
    <referenceTo>Endere_o_da_Conta__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>