force-app/main/default/objects/Pedido__c/fields/Numero_do_Pedido_Representante__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Pedido_Representante__c</fullName>
    <label>Numero do Pedido Representante</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>