force-app/main/default/objects/Pedido__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observacao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>